tests/NormalTests/paczka1/small_fuzzy/46162447.err
Error in line 4: aRKKQf8eil A559 4,8
Error in line 1: vCP1 A559 41,2
Error in line 8: 38p4j2 A496 74,7
Error in line 9: A559 A559 73,8
